update version 1.3, update menu, tối ưu code, update hỗ trợ 1.21.8